# WordlePro

./: .gitignore  CLAUDE.md  LICENSE  README.md  data.json  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_4d906e04af7b8fe9___init___py.html  z_4d906e04af7b8fe9_benchmark_py.html  z_4d906e04af7b8fe9_cache_py.html  z_4d906e04af7b8fe9_cli_py.html  z_4d906e04af7b8fe9_controller_py.html  z_4d906e04af7b8fe9_game_py.html  z_4d906e04af7b8fe9_main_py.html  z_4d906e04af7b8fe9_patterns_py.html  z_4d906e04af7b8fe9_solver_py.html  z_4d906e04af7b8fe9_view_py.html  z_4d906e04af7b8fe9_words_py.html
src/wordlepro/: __init__.py  benchmark.py  cache.py  cli.py  controller.py  game.py  main.py  patterns.py  solver.py  view.py  words.py
tests/: test_cache.py  test_cli.py  test_controller.py  test_game.py  test_patterns.py  test_smoke.py  test_solver.py  test_view.py  test_words.py
