[project]
name = "wordlepro"
version = "0.1.0"
description = "Finds the optimal solution for a game of Wordle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wordlepro = "wordlepro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordlepro"]
