[project]
name = "wordlepro"
dynamic = ["version"]
description = "Finds the optimal solution for a game of Wordle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "mypy>=1.10"]

[project.scripts]
wordlepro = "wordlepro.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/wordlepro"]
include = ["src/wordlepro/data/*.txt"]
